--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
+    "express-session": "^1.18.1",
     "mysql2": "^3.13.0",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
