--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "description": "Social Game web app for CSCI-3321",
   "main": "index.js",
   "scripts": {
-    "build:css": "postcss public/styles/tailwind.css -o public/styles/style.css"
+    "build:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
+    "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
+    "pretest": "cross-env NODE_ENV=test npm run migrate:reset",
+    "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
+    "migrate": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.14",
+    "@tailwindcss/postcss": "^4.0.15",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
@@ -20,6 +24,19 @@
     "mysql2": "^3.13.0",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1",
+    "sequelize": "^6.37.6",
+    "sequelize-cli": "^6.6.2",
     "tailwindcss": "^4.0.14"
+  },
+  "devDependencies": {
+    "cross-env": "^7.0.3",
+    "jest": "^29.7.0",
+    "supertest": "^7.1.0"
+  },
+  "jest": {
+    "testEnvironment": "node",
+    "coveragePathIgnorePatterns": [
+      "/node_modules/"
+    ]
   }
 }
