--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "social-game-app",
   "version": "1.0.0",
   "description": "Social Game web app for CSCI-3321",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "build:css": "postcss public/styles/tailwind.css -o public/styles/style.css",
     "test": "cross-env NODE_ENV=test jest --testTimeout=10000",
     "pretest": "cross-env NODE_ENV=test npm run migrate:reset",
+    "start": "node app.js",
     "migrate:reset": "npx sequelize-cli db:migrate:undo:all && npm run migrate",
     "migrate": "npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all"
   },
