--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "postcss-cli": "^11.0.1",
     "sequelize": "^6.37.6",
     "sequelize-cli": "^6.6.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "tailwindcss": "^4.0.14"
   },
   "devDependencies": {
